PreDexing support for 21+ multi-dexing.
Change-Id: I016aca148992eb42a73b569e91ff45ae8b22d89a